--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,7 @@
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=C:\\xampp\\htdocs\\ProjectRecipe
+copy.src.target=D:\\xampp\\htdocs\\ProjectRecipe
 hostname=localhost
 port=8000
-router=server.php
 run.as=INTERNAL
 url=http://localhost:8000/
